[tool.poetry]
name = "mon2pcap"
version = "1.0.3"
description = "Convert StarOS \"monitor subscriber\" or \"monitor protocol\" ASCII dump to PCAP"
authors = ["Artur Russu <arussu@cisco.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/arussu/mon2pcap"
keywords = ["scapy", "mon2pcap"]
classifiers = [
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
]

[tool.poetry.dependencies]
python = "^3.8.1"
scapy = "^2.5.0"
tqdm = "^4.65.0"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
flake8 = "^6.0.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 88

[tool.poetry.scripts]
mon2pcap = "mon2pcap.console:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
