[project]
name = "mon2pcap"
version = "1.0.8"
description = "Convert StarOS \"monitor subscriber\" or \"monitor protocol\" ASCII dump to PCAP"
authors = [{name = "Artur Russu", email = "arussu@cisco.com"}]
license = {text = "GPL-3.0-only"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["scapy", "mon2pcap"]
classifiers = [
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
]
dependencies = [
    "scapy>=2.5.0,<3.0.0",
    "tqdm>=4.0.0",
]

[project.urls]
repository = "https://github.com/arussu/mon2pcap"

[project.scripts]
mon2pcap = "mon2pcap.console:run"

[dependency-groups]
dev = [
    "black>=23.3.0",
    "isort>=5.13.2",
    "pytest>=8.3.5",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
